--- a/pugnax_popgen/Makefile
+++ b/pugnax_popgen/Makefile
@@ -11,7 +11,7 @@ coi = 1270 2063 3047 3208 3357 3750 3913 4111 4944 9013
 phased = MB8684ht MB8685ht MB8686ht MB8687ht MB8688ht
 
 pcoi = $(addprefix Contig,$(coi))
-phoi = $(foreach p,$(phased),$(addsuffix $(p)_,$(pcoi)))
+phoi = $(foreach p,$(phased),$(addsuffix _$(p),$(pcoi)))
 
 cdsbed = $(addsuffix .bed,$(phoi))
 
