--- a/pugnax_popgen/Makefile
+++ b/pugnax_popgen/Makefile
@@ -37,7 +37,7 @@ CDSBED = $(addprefix $(PG),$(cdsbed))
 cds-ann:	$(CDSBED)
 
 $(PG)ugenes.txt:	$(CDSBED)
-	cat $^ | awk -F"\t" ' { split($$1,a,"_"); split($$9,b,";"); gsub(" gene_id ","",b[2]); gsub(/"/,"",b[2]); print a[1]"_"b[2] } ' > $@
+	cat $^ | awk -F"\t" ' { split($$1,a,"_"); split($$9,b,";"); gsub(" gene_id ","",b[2]); gsub(/"/,"",b[2]); print a[1]"_"b[2] } ' | sort | uniq > $@
 
 
 $(PG)Contig%.bed:	$(AA)Contig%.fasta.gff
