--- a/pugnax_popgen/Makefile
+++ b/pugnax_popgen/Makefile
@@ -43,7 +43,7 @@ cds-by-gene:
 cds-ann:	$(CDSBED)
 
 $(PG)Contig%.bed:	$(AA)Contig%.fasta.gff
-	grep "^#" -v $^ | grep "CDS" | awk -F"\t" ' BEGIN { OFS="\t" }; { split($$1,a,"_"); split($$9,b,";"); gsub(" gene_id ","",b[2]); gsub(/"/,"",b[2]); print a[1],$$4,$$5,a[1]"_"a[2]"_"b[2]"_cds_"$$4"_"$$5,$$6,$$7 } '> $@
+	grep "^#" -v $^ | grep "CDS" | awk -F"\t" ' BEGIN { OFS="\t" }; { split($$1,a,"_"); split($$9,b,";"); gsub(" gene_id ","",b[2]); gsub(/"/,"",b[2]); print $$1,$$4,$$5,a[1]"_"a[2]"_"b[2]"_cds_"$$4"_"$$5,$$6,$$7 } '> $@
 
 ###### ######
 
