--- a/pugnax_popgen/Makefile
+++ b/pugnax_popgen/Makefile
@@ -43,7 +43,7 @@ KFA = $(addprefix $(PG),$(addsuffix .fa,$(kfa)))
 KCDS = $(addprefix $(PG)cds_,$(addsuffix .fa,$(kfa)))
 
 .PHONY:	kcat
-kcat:	$(KDS)
+kcat:	$(KCDS)
 
 $(PG)cds_%_KILDEER.fa:	$(PG)%_KILDEER.fa
 	awk -F"\t" ' { split($$1,a,"_"); A[a[1]"_"a[2]"_"a[3]]=A[a[1]"_"a[2]"_"a[3]]$$2 }; END { for (i in A) print ">"i"\n"A[i] } ' $^ > $@
